--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 narwhals==1.42.1
-numpy==1.26.0
+numpy>=1.26.0
 packaging==24.2
-pandas==2.0.3
+pandas>=2.1.0
 patsy==1.0.1
 pillow==10.4.0
 pkgutil-resolve-name==1.3.10
@@ -34,10 +34,10 @@ referencing==0.35.1
 requests==2.32.4
 rich==13.9.4
 rpds-py==0.20.1
-scipy==1.10.1
+scipy>=1.11.0
 six==1.17.0
 smmap==5.0.2
-statsmodels==0.14.1
+statsmodels>=0.14.2
 streamlit==1.40.1
 tenacity==9.0.0
 toml==0.10.2
